<resources>
    <string name="app_name">Umich CSSA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_recentActivities">Recent Activities</string>
    <string name="action_news">News</string>
    <string name="action_tickets">Tickets</string>
    <string name="action_sales">Sales &amp; Leasing</string>
    <string name="action_courseSchedule">Course Schedule</string>

    <!--Setting strings-->
    <string name="category_network">Network</string>
    <string name="network_setting_title">Download under 3G/4G network</string>
    <string name="title_activity_delete_course">DeleteCourseActivity</string>

    <string name="course_catalog">Course Catalog</string>
    <string name="course_Nbr">Course Number</string>

    <string name="input_course_catalog">Course catalog, i.e.EECS</string>
    <string name="input_course_nbr">Course number, i.e.183</string>
    <string name="search_course_section">Search</string>

    <string name="update_time">0</string>
</resources>
